vite-template2/kubernetes-manifests/minimal-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx

spec:
  tls:
  - hosts:
    - dummy.flyku.com
    secretName: userapi-tls
  ingressClassName: nginx
  rules:
  - host: dummy.flyku.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatbot-service
